# livekit-agents-playground

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  ruff.toml
src/gpass/: agent.py  main.py  types.py
src/gpass/agents/: default.py
src/gpass/conf/: __init__.py  settings.py
src/gpass/conf/livekit/: __init__.py  _common.py  _llm.py  _stt.py  _tts.py  store.py
src/gpass/plugins/google/: __init__.py  denoise.py  sentence_tokenizer.py  stt.py
src/gpass/rtc_session/: default.py  gpass.py  stt.py  stt_playground.py
src/gpass/schema/: __init__.py  user_data.py
src/gpass/services/: livekit.py
