[project]
name = "gpass"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
  "dependency-injector>=4.48.2",
  "fsspec[s3]>=2025.10.0",
  "growthbook>=1.4.7",
  "hydra-zen>=0.16.0",
  "livekit-agents[aws,openai,google,groq,silero,turn-detector]>=1.3.5",
  "livekit-plugins-noise-cancellation~=0.2",
  "pydantic-settings>=2.12.0",
  "pydantic>=2.12.5",
  "universal-pathlib>=0.3.6",
  "valkey[libvalkey]>=6.1.1",
]

[dependency-groups]
dev = ["python-dotenv>=1.2.1"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
compile-bytecode = true
